# tauri-native-ui

./: README.md
apps/client/src/: router.tsx  styles.css
apps/client/src/routes/: __root.tsx
apps/client/src/routes/(root)/: index.tsx
apps/client/src/tauri/utils/: index.ts
apps/client/src/webviews/panel/: index.tsx
apps/client/src/webviews/popover/: index.tsx
apps/client/src/webviews/tray/: index.tsx
tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
tauri/capabilities/: default.json
tauri/crates/tauri-nspopover-plugin/: CHANGELOG.md  Cargo.toml  README.md  package.json
tauri/crates/tauri-nspopover-plugin/example/src/: main.ts
tauri/crates/tauri-nspopover-plugin/src/: lib.rs  popover.rs
tauri/src/: commands.rs  domain.rs  lib.rs  macos.rs  macos_bridge.rs  panel_controller.rs  swift_bridge.rs  tray.rs
tauri/swift-bridge/Sources/SwiftBridge/: popover.swift  toast.swift  tooltip.swift  tray.swift  webview_popover.swift  window_as_panel.swift  window_as_popover.swift
tauri/swift-library/: .gitignore  Package.swift
tauri/swift-library/Sources/swift-library/: bridging-header.h  haptics.swift  popover.swift  toast.swift  tooltip.swift  tray.swift  window_as_panel.swift  window_as_popover.swift
