[package]
name = "tauri-experiments"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_experiments_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
once_cell = "1.21.4"
serde = "1.0.228"
serde_json = "1.0.150"
tauri = { version = "2.9.2", features = ["tray-icon", "macos-private-api", "unstable"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-shell = "2.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
swift-bridge = "0.1"
objc2-app-kit = "0.3"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-bridge-build = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
